fix:modal close on smaller screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -128,6 +128,10 @@ body {
   width: 320px;
 }
 
+.mockup-img:hover {
+  transform: scale(1.1, 1.1);
+}
+
 .color-box {
   position: absolute;
   z-index: -2;
@@ -205,7 +209,7 @@ body {
   padding-top: 20px;
   left: 0;
   top: 0;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   overflow: auto;
   background-color: rgba(0, 0, 0, 1);
@@ -471,9 +475,23 @@ img.hover-shadow {
     margin-bottom: 0.5rem;
   }
 
+  .modal {
+    padding-top: 100px;
+  }
+
   .mySlides img {
-    margin-top: 50px;
+    margin-top: 5%;
     width: 250px;
+  }
+
+  .close-btn {
+    top: 10px;
+    right: 5%;
+    font-size: 70px;
+  }
+
+  #footer p {
+    font-size: 14px;
   }
 }
 
